errors
REmatch libs: rematchlib
REmatch libs: rematchlib
Adding testing configuration
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/factories/variable_factory.cpp:9:
/home/kyle/programming/cpp/REmatch/src/rematch/parsing/factories/variable_factory.hpp:76:7: warning: private field 'computedOffsets' is not used [-Wunused-private-field]
        bool computedOffsets; // True iff offsetMap was computed.
             ^
1 warning generated.
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/parser.cpp:1:
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/parser.hpp:8:
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/factories/variable_factory.hpp:14:
/home/kyle/programming/cpp/REmatch/src/rematch/parsing/charclass_builder.hpp:49:13: error: explicit specialization of 'std::hash<rematch::CharClassBuilder>' after instantiation
struct std::hash<rematch::CharClassBuilder> {
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/type_traits:2559:7: note: implicit instantiation first required here
      std::declval<_Fn>()(std::declval<_Args>()...)
      ^
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/parser.cpp:1:
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/parser.hpp:7:
In file included from /home/kyle/programming/cpp/REmatch/src/rematch/parsing/factories/filter_factory.hpp:5:
In file included from /usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/unordered_map:46:
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/hashtable.h:615:7: error: attempt to use a deleted function
      ~_Hashtable() noexcept;
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/unordered_map.h:102:11: note: in instantiation of member function 'std::_Hashtable<rematch::CharClassBuilder, std::pair<const rematch::CharClassBuilder, char>, std::allocator<std::pair<const rematch::CharClassBuilder, char>>, std::__detail::_Select1st, std::equal_to<rematch::CharClassBuilder>, std::hash<rematch::CharClassBuilder>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<true, false, true>>::~_Hashtable' requested here
    class unordered_map
          ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr_base.h:613:28: note: in instantiation of function template specialization 'std::allocator_traits<std::allocator<void>>::destroy<rematch::FilterFactory>' requested here
        allocator_traits<_Alloc>::destroy(_M_impl._M_alloc(), _M_ptr());
                                  ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr_base.h:599:2: note: in instantiation of member function 'std::_Sp_counted_ptr_inplace<rematch::FilterFactory, std::allocator<void>, __gnu_cxx::_S_atomic>::_M_dispose' requested here
        _Sp_counted_ptr_inplace(_Alloc __a, _Args&&... __args)
        ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr_base.h:972:6: note: in instantiation of function template specialization 'std::_Sp_counted_ptr_inplace<rematch::FilterFactory, std::allocator<void>, __gnu_cxx::_S_atomic>::_Sp_counted_ptr_inplace<>' requested here
            _Sp_cp_type(__a._M_a, std::forward<_Args>(__args)...);
            ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr_base.h:1712:14: note: in instantiation of function template specialization 'std::__shared_count<__gnu_cxx::_S_atomic>::__shared_count<rematch::FilterFactory, std::allocator<void>>' requested here
        : _M_ptr(), _M_refcount(_M_ptr, __tag, std::forward<_Args>(__args)...)
                    ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr.h:464:4: note: in instantiation of function template specialization 'std::__shared_ptr<rematch::FilterFactory, __gnu_cxx::_S_atomic>::__shared_ptr<std::allocator<void>>' requested here
        : __shared_ptr<_Tp>(__tag, std::forward<_Args>(__args)...)
          ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/shared_ptr.h:1009:14: note: in instantiation of function template specialization 'std::shared_ptr<rematch::FilterFactory>::shared_ptr<std::allocator<void>>' requested here
      return shared_ptr<_Tp>(_Sp_alloc_shared_tag<_Alloc>{__a},
             ^
/home/kyle/programming/cpp/REmatch/src/rematch/parsing/visitors/filter_factory_visitor.hpp:41:47: note: in instantiation of function template specialization 'std::make_shared<rematch::FilterFactory>' requested here
      : vfact_ptr(_vfact_ptr), ffact_ptr(std::make_shared<FilterFactory>()) {}
                                              ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/hashtable_policy.h:1632:7: note: destructor of '_Hashtable_base<rematch::CharClassBuilder, std::pair<const rematch::CharClassBuilder, char>, std::__detail::_Select1st, std::equal_to<rematch::CharClassBuilder>, std::hash<rematch::CharClassBuilder>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Hashtable_traits<true, false, true>>' is implicitly deleted because base class '_Hash_code_base<rematch::CharClassBuilder, std::pair<const rematch::CharClassBuilder, char>, std::__detail::_Select1st, std::hash<rematch::CharClassBuilder>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, _Hashtable_traits<true, false, true>::__hash_cached::value>' has a deleted destructor
    : public _Hash_code_base<_Key, _Value, _ExtractKey, _Hash, _RangeHash,
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/hashtable_policy.h:1240:7: note: destructor of '_Hash_code_base<rematch::CharClassBuilder, std::pair<const rematch::CharClassBuilder, char>, std::__detail::_Select1st, std::hash<rematch::CharClassBuilder>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, true>' is implicitly deleted because base class '_Hashtable_ebo_helper<1, std::hash<rematch::CharClassBuilder>>' has a deleted destructor
    : private _Hashtable_ebo_helper<1, _Hash>
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/hashtable_policy.h:1176:7: note: destructor of '_Hashtable_ebo_helper<1, std::hash<rematch::CharClassBuilder>, true>' is implicitly deleted because base class 'std::hash<rematch::CharClassBuilder>' has a deleted destructor
    : private _Tp
      ^
/usr/bin/../lib64/gcc/x86_64-pc-linux-gnu/12.2.1/../../../../include/c++/12.2.1/bits/functional_hash.h:102:19: note: destructor of 'hash<rematch::CharClassBuilder>' is implicitly deleted because base class '__hash_enum<rematch::CharClassBuilder>' has an inaccessible destructor
    struct hash : __hash_enum<_Tp>
                  ^
2 errors generated.
make[2]: *** [src/rematch/CMakeFiles/rematchlib.dir/build.make:328: src/rematch/CMakeFiles/rematchlib.dir/parsing/parser.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:949: src/rematch/CMakeFiles/rematchlib.dir/all] Error 2
make: *** [Makefile:101: all] Error 2
